// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlashMessage /> matches snapshot 1`] = `""`;

exports[`<FlashMessage /> matches snapshot 2`] = `
<styled.div>
  <styled.div>
    <styled.div>
      animi vel provident dicta perferendis dolorum cupiditate
       
       
    </styled.div>
    <Styled(Button)
      onClick={[Function]}
    >
      X
    </Styled(Button)>
  </styled.div>
</styled.div>
`;

exports[`<FlashMessage /> matches snapshot 3`] = `
<styled.div
  className="saepe ut assumenda sint quia sed exercitationem"
>
  <styled.div>
    <styled.div>
      debitis rem similique temporibus aliquam sed sapiente
       
      <Styled(LinkComponent)
        href="http://Klocko.info/"
      >
        Mrs. Keanu Weissnat
      </Styled(LinkComponent)>
       
    </styled.div>
    <Styled(Button)
      onClick={[Function]}
    >
      X
    </Styled(Button)>
  </styled.div>
</styled.div>
`;

exports[`<FlashMessage /> matches snapshot 4`] = `""`;

exports[`<FlashMessage /> matches snapshot 5`] = `""`;

exports[`<FlashMessage /> matches snapshot 6`] = `
<styled.div
  className="eveniet assumenda quis quae iusto sapiente nostrum"
>
  <styled.div>
    <styled.div>
      et maxime quia dolores quisquam aut consequatur
       
       
    </styled.div>
    <Styled(Button)
      onClick={[Function]}
    >
      X
    </Styled(Button)>
  </styled.div>
</styled.div>
`;

exports[`<FlashMessage /> matches snapshot 7`] = `""`;

exports[`<FlashMessage /> matches snapshot 8`] = `
<styled.div>
  <styled.div>
    <styled.div>
      autem ut ullam et possimus sint fugiat
       
       
    </styled.div>
    <Styled(Button)
      onClick={[Function]}
    >
      X
    </Styled(Button)>
  </styled.div>
</styled.div>
`;
